<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="10dp"
    tools:context=".activities.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_proprietario_layout"
            android:id="@+id/proprietario_detail_text"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endereco_layout"
            android:id="@+id/endereco_detail_text"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tamanho_detail_text"
            android:textSize="20sp"
            android:text="@string/tamanho_layout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/ano_detail_text"
            android:text="@string/ano_de_construcao_layout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tipo_imovel_detail_text"
            android:text="@string/tipo_do_imovel_layout"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/andar_detail_text"
            android:textSize="20sp"
            android:text="@string/andar_layout"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/valor_do_imposto_layout"
            android:id="@+id/imposto_detail_text"
            android:textSize="70sp"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>